Cập nhật chuyển động tự nhiên và âm thanh nhạc nền đơn giản

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
 <!-- PixiJS CDN -->
+ 
 <script type="module">
     import * as PIXI from 'https://cdn.jsdelivr.net/npm/pixi.js@7.2.4/dist/pixi.min.mjs';
+    
     window.PIXI = PIXI;
   </script>
 
@@ -51,6 +53,7 @@
     <div>⭐ Level: <span id="level">1</span></div>
     <div>🐟 Fish Eaten: <span id="fishCount">0</span></div>
     <div>🏆 Score: <span id="score">0</span></div>
+    <div>🎵 Music: <button id="toggleMusicBtn">Pause</button></div>
   </div>
   <button id="exitBtn">Exit</button>
 
