sửa logic tính điểm, thêm start scene, sửa nút exit, sửa lỗi game chạy ngầm

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div>🏆 Score: <span id="score">0</span></div>
     <div>🎵 Music: <button id="toggleMusicBtn">Pause</button></div>
   </div>
-  <button id="exitBtn">Exit</button>
+  <!--<button id="exitBtn">Exit</button>-->
 
   <!-- Entry -->
   <script type="module" src="source/app.js"></script>
